align issue on bold app css changes

--- a/assets/bold-options.css
+++ b/assets/bold-options.css
@@ -102,7 +102,7 @@ bold-options.css version 6
 .bold_option_element input,
 .bold_option_element select,
 .bold_option_element textarea {
-                margin-left: 4px;
+                margin-left: 0;
         height: auto;
 }
 
